Fix drawer font size and alignment

--- a/app/assets/stylesheets/drawer.css.less
+++ b/app/assets/stylesheets/drawer.css.less
@@ -66,9 +66,6 @@ a.drawer-list-item {
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  font-size: 16px;
-  letter-spacing: 0.04em;
-  line-height: 1.5rem;
   text-transform: inherit;
   position: relative;
   padding: 0 16px;
@@ -78,7 +75,7 @@ a.drawer-list-item {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  height: 48px;
+  height: 42px;
 
   &.active {
     font-weight: 400;
@@ -90,7 +87,7 @@ a.drawer-list-item {
   }
 
   span {
-    font-size: 20px;
+    font-size: 18px;
     margin-right: 24px;
   }
 }
